--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,6 +2,5 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  margin-left: 3em;
 }
