--- a/src/components/Todo/show-todo.css
+++ b/src/components/Todo/show-todo.css
@@ -19,7 +19,7 @@ p {
 }
 
 button {
-    margin-right: .5em;
+    margin-right: 0.5em;
     border-radius: 8px;
     padding: 0.35em 0.65em;
     border: 1px solid;
@@ -48,9 +48,16 @@ button {
 .delete-button {
     --fg-color: tomato;
     --bg-color: white;
+    margin-left: 0.5em;
+
 }
 
 .delete-button:hover {
     --fg-color: white;
     --bg-color: tomato;
+}
+
+.vertical {
+    border-left: 1px solid black;
+    height: 25px;
 }
