--- a/public/shippd.css
+++ b/public/shippd.css
@@ -15,6 +15,11 @@
   --color-nav-footer: #1c3535;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 body {
   --font-family: "Avenir", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: flex;
@@ -34,6 +39,13 @@ body > div.container {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+}
+
+pre {
+  background-color: rgba(223, 223, 223, 0.584);
+  display: flex;
+  justify-content: flex-start;
+  padding: 1em;
 }
 
 /*--------------------- Headings -------------------*/
