--- a/src/components/Todo/show-todo.css
+++ b/src/components/Todo/show-todo.css
@@ -61,3 +61,13 @@ button {
     border-left: 1px solid black;
     height: 25px;
 }
+
+.check {
+    display: inline-block;
+    transform: rotate(45deg);
+    height: 24px;
+    width: 12px;
+    border-bottom: 7px solid var(--color-success);
+    border-right: 7px solid var(--color-success);
+    margin-right: 1em;
+  }
